Fix security filter
