# api/src/main/kotlin/app/nextrole/api/utils/security/jwt/JwtService.kt
@@ -1,5 +1,6 @@
 package app.nextrole.api.utils.security.jwt
 
+import app.nextrole.api.SessionUser
 import com.google.firebase.auth.UserRecord
 
 /**
@@ -10,7 +11,9 @@ interface JwtService {
     /**
      * Generate a long-lived JWT
      */
-    fun generateToken(uid: String): String
+    fun generateToken(user: String): String
 
     fun getFirebaseUser(token: String): UserRecord
+
+    fun jwtToUser(jwt: String): SessionUser
 }
