# api/src/main/resources/openapi/openapi.json
@@ -102,28 +102,6 @@
         }
       }
     },
-    "/user/token-exchange": {
-      "get": {
-        "tags": [
-          "user"
-        ],
-        "summary": "Exchange token",
-        "description": "Exchange a short-lived Firebase token for a long-lived, self-signed token",
-        "operationId": "exchangeToken",
-        "responses": {
-          "200": {
-            "description": "Get user profile response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/SessionUser"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/pdf/convert": {
       "post": {
         "tags": [
